<resources>
    <string name="app_name">Theorify</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="rg_username">Username</string>
    <string name="rg_password">Password</string>
    <string name="rg_password_repeat">Password de Confirmação</string>
    <string name="login">Login</string>
    <string name="register">Registar</string>
    <string name="delete_account">Apagar Conta</string>
    <string name="sign_out">Sair</string>
    <string name="login_to_register">Não tens conta? <u>Regista-te aqui!</u></string>
    <string name="register_to_login">Já tens conta? <u>Autentica-te!</u></string>
    <string name="seminima">Seminima</string>
    <string name="semibreve">semibreve</string>
    <string name="minima">minima</string>
    <string name="colcheia">colcheia</string>
    <string name="semicolcheia">semicolcheia</string>
    <string name="fusa">fusa</string>
    <string name="semifusa">semifusa</string>
    <string name="acorde">acorde</string>
    <string name="arpeggio">arpeggio</string>
    <string name="conceito_semibreve">Uma semibreve é a nota padrão mais longa e é mantida por quatro batidas. Parece um oval oco sem haste.</string>
    <string name="conceito_minima">Uma mínima é mantida por duas batidas, metade da duração de uma semibreve. Parece um oval oco com uma haste</string>
    <string name="conceito_seminima">Uma semínima é mantida por uma batida, um quarto da duração de uma semibreve. Parece um oval preenchido com uma haste.</string>
    <string name="conceito_colcheia">Uma colcheia é mantida por meio batida, uma oitava da duração de uma semibreve. Parece uma forma oval preenchida com uma haste e uma bandeira.</string>
    <string name="conceito_semicolcheia">Uma semicolcheia é mantida por um quarto de uma batida. Parece uma colcheia, mas com duas bandeiras ou trave.</string>
    <string name="conceito_fusa">Uma fusa é mantida por um oitavo de uma batida. Possui três bandeiras ou vigas.</string>
    <string name="conceito_semifusa">Uma semifusa é mantida por um décimo sexto de uma batida e tem quatro bandeiras ou vigas.</string>
    <string name="conceito_acorde">Um acorde na música é uma combinação de três ou mais notas tocadas simultaneamente, criando um som harmônico. As notas em um acorde são geralmente construídas a partir de uma escala, com cada acorde normalmente tendo uma nota fundamental (a nota base que dá nome ao acorde) e outras notas que contribuem para seu som geral. Essas notas adicionais são frequentemente selecionadas com base em sua relação com a nota raíz, normalmente uma terceira (que cria a harmonia básica) e uma quinta (que estabiliza o som). Na imagem apresentada encontra-se um acorde Dó Maior.</string>
    <string name="conceito_arpeggio">Um arpeggio é tocar as notas de um acorde, uma de cada vez, e não todas de uma vez. Esta técnica divide o acorde em uma sequência de notas individuais que geralmente são tocadas em uma ordem específica, seja ascendente (da nota mais grave para a mais aguda) ou descendente (da nota mais aguda para a mais grave). Na imagem apresentada encontra-se o arpeggio do acorde Dó Maior.</string>
    <string name="notas">Notas</string>
    <string name="pausas">Pausas</string>
    <string name="pausa_semibreve">pausa_semibreve</string>
    <string name="pausa_minima">pausa_minima</string>
    <string name="conceito_pausa_semibreve">Esta pausa dura quatro batidas, o mesmo que uma nota inteira. Parece um pequeno retângulo pendurado na segunda linha da pauta.</string>
    <string name="conceito_pausa_minima">Esta pausa dura duas batidas, o mesmo que uma mínima. Parece um pequeno retângulo colocado na linha central da pauta (de cabeça para baixo em comparação com todo o resto).</string>
    <string name="conceito_pausa_seminima">Esta pausa dura uma batida, o mesmo que uma semínima. Tem um formato de linha ondulada.</string>
    <string name="pausa_seminima">pausa_seminima</string>
    <string name="pausa_colcheia">pausa_colcheia</string>
    <string name="conceito_pausa_colcheia">Esta pausa dura meia batida, o mesmo que uma colcheia. Parece uma única bandeira de colcheia (apenas a bandeira sem a haste).</string>
    <string name="pausa_semicolcheia">pausa_semicolcheia</string>
    <string name="conceito_pausa_semicolcheia">Esta pausa dura um quarto de batida, o mesmo que uma semicolcheia. Parece uma única bandeira de semicolcheia, mas com duas linhas.</string>
    <string name="pausa_fusa">pausa_fusa</string>
    <string name="conceito_pausa_fusa">Esta pausa dura uma oitava de batida, o mesmo que uma fusa. Parece uma única bandeira de semicolcheia, mas com três linhas.</string>
    <string name="pausa_semifusa">pausa_semifusa</string>
    <string name="conceito_pausa_semifusa">Esta pausa dura um décimo sexto de uma batida, o mesmo que uma semifusa. Parece uma única bandeira de semicolcheia, mas com quatro linhas.</string>
    <string name="claves">Claves</string>
    <string name="clavesol">claveSol</string>
    <string name="clavefa">clavefa</string>
    <string name="clavealto">clavealto</string>
    <string name="clavetenor">clavetenor</string>
    <string name="chavegmaior">chaveGMaior</string>
    <string name="conceito_claveSol">A Clave de Sol é a clave mais usada e é frequentemente vista na música para instrumentos mais agudos (como violino, flauta e trompete) e nas faixas mais altas de instrumentos como piano e guitarra.</string>
    <string name="conceito_claveFa">A Clave de Fá é usada para instrumentos mais graves (como baixo, violoncelo e tuba) e para instrumentos mais graves, como o contrabaixo ou baixo elétrico. É chamada de Clave de Fá porque os dois pontos se encontram ao redor da nota Fá, na quarta linha da pauta.</string>
    <string name="conceito_claveAlto">A Clave de Dó é usada principalmente para viola e às vezes para outros instrumentos, como o trombone alto. É chamada de Clave de Dó porque pode ser movida para diferentes posições, marcando a linha que representa Dó.</string>
    <string name="conceito_claveTenor">A Clave de Tenor é outra forma de Clave de Dó e é frequentemente usada para instrumentos como o trombone tenor, o fagote e a faixa superior do violoncelo. A clave também é a Clave de Dó, mas coloca a nota Dó na segunda linha da pauta.</string>
    <string name="conceito_Armadura_chaveGMaior">Indicam quais notas são consistentemente sustenidas ou bemol ao longo de uma peça musical, ajudando a definir sua tonalidade. Por exemplo, se uma armadura de clave tiver um sustenido (Fá sustentido), a música provavelmente será em Sol maior ou Mi menor (Menor Relativa).</string>
    <string name="password_show_btn">\"\"</string>
    <string name="username_account">Username:</string>
    <string name="password_account_hidden">Password: ●●●●●●</string>
    <string name="password_account_shown">Password:</string>
    <string name="ferramentas">Ferramentas</string>
    <string name="voicedetection">voicedetection</string>
    <string name="voicedetection_Name">Manipulação de Voz</string>
    <string name="noteexplorer">noteExplorer</string>
    <string name="exploradornota_Name">Explorador de Nota</string>
    <string name="scaleexplorer_Name">Explorador de Escala</string>
    <string name="scaleexplorer">scaleexplorer</string>
    <string name="chordexplorer">chordexplorer</string>
    <string name="chordexplorer_Name">Explorador de Acordes</string>
    <string name="circleoffifths">CircleofFifths</string>
    <string name="circleoffifths_Name">Círculo de Quintas</string>
    <string name="instrumentos_titulo">Instrumentos Musicais</string>
    <string name="piano_descricao">Um piano é um instrumento de teclado versátil e amplamente utilizado que oferece uma rica variedade de sons, tornando-o uma excelente escolha tanto para músicos iniciantes quanto experientes.</string>
    <string name="guitarra_acustica_descricao">Uma guitarra acústica é um instrumento de cordas popular, conhecido por sua versatilidade, portabilidade e som rico e ressonante.</string>
    <string name="guitarra_eletrica_descricao">A guitarra elétrica é um instrumento versátil que produz som por meio de captadores eletromagnéticos, que captam a vibração das cordas e a convertem em sinal elétrico.</string>
    <string name="descriacaoGeral">Bem Vindos à app Theorify, onde poderás aprender e explorar vários conceitos musicais de forma divertida e interativa.</string>
    <string name="mainimage">mainImage</string>
    <string name="note_button">note_button</string>
    <string name="pausa_button">pausa_button</string>
    <string name="home_button">home_button</string>
    <string name="clave_button">clave_button</string>
    <string name="tools_button">tools_button</string>
    <string name="profile_button">profile_button</string>
    <string name="instrumento_button">instrumento_button</string>
    <string name="logo">logo</string>
    <string name="explorerNotes_title">Explorador de Notas</string>
    <string name="octaveSpin_text">Oitava</string>
    <string name="noteSpin_text">Nota</string>
    <string name="playNote_text">Tocar Nota</string>
    <string name="explorerScales_title">Explorador de Escalas</string>
    <string name="playScale_text">Tocar Escala</string>
    <string name="qualitySpin_text">Qualidade da Escala</string>
    <string name="explorerChords_title">Explorador de Acordes</string>
    <string name="chordQualitySpin_text">Qualidade do Acorde</string>
    <string name="playChord_text">Tocar Acorde</string>
    <string name="playArpeggio_text">Arpeggiar</string>
    <string name="leftTitle_text">Navegação pela Esquerda</string>
    <string name="leftDescription_text">Ao mover-se no sentido anti-horário, você está descendo uma quinta perfeita.\nCada novo acorde ou tonalidade que você encontra terá um bemol a mais na sua armadura de clave.</string>
    <string name="rightDescription_Text">Ao mover-se no sentido horário ao redor do círculo de quintas, você está subindo uma quinta perfeita.\nCada novo acorde ou tonalidade que você encontra terá um sustenido a mais na sua armadura de clave.</string>
    <string name="rightTitle_text">Navegação pela Direita</string>
    <string name="circleOfFifthsTitle_text">Círculo das Quintas</string>
    <string name="Title_Note">Modulação de Voz</string>
</resources>